--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       >
         <h1 class="text-4xl font-bold text-indigo-900">Hi, I'm Rajnish Karan</h1>
         <p class="text-gray-400 text-sm">
-          Experienced in SEO writting, content writting, transcripting and data analyst, I adeptly craft engaging narratives and extract actionable insights to drive informed decision-making.
+          Experienced in SEO writting, content writting, technical writting, transcripting and data analyst, I adeptly craft engaging narratives and extract actionable insights to drive informed decision-making.
         </p>
         <a
           class="bg-indigo-600 text-white text-xl px-3 py-2 rounded-md font-semibold w-fit"
@@ -134,10 +134,14 @@
             Better Experience
           </h1>
           <p class="text-gray-400">
-            With over a year of experience in content writing, data analysis, and transcription, I specialize in crafting content and analyzing data. As a multi-disciplinary professional, I bring a unique perspective to each project, seamlessly integrating innovative concepts and technologies for impactful results.
+            With over a year of experience in content writing, technical writting, data analysis, and transcription, I specialize in crafting content and analyzing data. As a multi-disciplinary professional, I bring a unique perspective to each project, seamlessly integrating innovative concepts and technologies for impactful results.
           </p>
           
           <h2 class="text-gray-400 font-medium">HR</h2>
+          <div class="w-full bg-gray-200 h-1.5 rounded-md">
+            <div class=" bg-indigo-600 h-1.5 rounded-md"></div>
+          </div>
+          <h2 class="text-gray-400 font-medium">TECHNICAL WRITTING</h2>
           <div class="w-full bg-gray-200 h-1.5 rounded-md">
             <div class=" bg-indigo-600 h-1.5 rounded-md"></div>
           </div>
