--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
             <img class="w-10" src="./img/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">TECHNICAL WRITTING</h1>
+            <p class="text-gray-400">   
+              As a technical creator I wrote a really intricate user manual for an updated augmented reality headset concentrating on set up details, some guidelines for troubleshooting and progressive traits aimed toward enhancing the nice of the consumer's enjoy.
+            </p>
+          </div>
+          <!-- card -->
+          <div
+            class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
+          >
+            <img class="w-10" src="./img/icon.png" alt="" />
             <h1 class="font-medium text-lg dark:text-white">CONSULTING AND ADVICE</h1>
             <p class="text-gray-400">
               Providing invaluable expertise and informed guidance on the latest front-end development best practices, cutting-edge technologies, and emerging trends, empowering clients to make well-informed decisions for their projects.
