--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <div
             class="w-full md:w-5/12 lg:w-1 shadow-xl rounded-lg my-3 md:my-10 m-1 "
           >
-            <p id="work2">Article writer for CEOWORLD Magazine</p>
+            <p id="work2">Article/Technical writer for CEOWORLD Magazine</p>
             <p id="workcontent2">As a writer for CEOWORLD Magazine, I have the privilege of crafting articles that capture the attention of readers and spark meaningful conversations. Through my writing, I have been able to connect with a growing audience and cultivate a loyal following. It brings me joy to see my work resonating with others and making a positive impact</p>
           </div>
         </div>
