--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
             <h1 class="font-medium text-lg dark:text-white">TECHNICAL WRITTER</h1>
             <p class="text-gray-400">   
               As a technical creator I wrote a really intricate user manual for an updated augmented reality headset concentrating on set up details, some guidelines for troubleshooting and progressive traits aimed toward enhancing the nice of the consumer's enjoy.
-          <!-- card -->
+            </p>
+            </div>
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
